--- a/lab6.Rmd
+++ b/lab6.Rmd
@@ -1,16 +1,21 @@
 ---
 title: "Lab 6 - Quantitative Insights"
-output: 
-  github_document:
-    toc: true
-    toc_depth: 2
-editor_options: 
+output:
+  html_notebook:
+    toc: yes
+    toc_depth: 3
+    toc_float: yes
+  html_document:
+    df_print: paged
+    toc: yes
+    toc_depth: '3'
+editor_options:
   chunk_output_type: inline
 ---
 
 ## Instructions and Overview
 
-In this lab, we will practice calculating and interpreting measures of central tendency and measures of dispersion, as well as the consequences of relying on such numbers out of context to represent complex problems. To begin you will need to import and clean your dataset, and then you will follow the prompts while responding to short answer questions. Examples have been provided to support you throughout the process. At the end of the assignment, we will integrate some of your calculations into the Shiny application you started last week. 
+In this lab, we will practice calculating and interpreting measures of central tendency and measures of dispersion, as well as investigating the consequences of relying on such numbers out of context to represent complex problems. To begin you will need to import and clean your dataset, and then you will follow the prompts while responding to short answer questions. Examples have been provided to support you throughout the process. At the end of the assignment, we will integrate some of your calculations into the Shiny application you started last week. 
 
 ## Getting Started
 
@@ -26,6 +31,8 @@ library(shinyWidgets)
 ### Import and clean example datasets 
 ```{r}
 hospitals <- read.csv("https://raw.githubusercontent.com/lindsaypoirier/STS-115/master/datasets/Hospitals.csv", stringsAsFactors = FALSE)
+
+world_health_econ <- read.csv("https://raw.githubusercontent.com/lindsaypoirier/STS-115/master/datasets/world_health_econ.csv", stringsAsFactors = FALSE)
 
 cases <- read.csv("https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv", stringsAsFactors = FALSE)
 
@@ -60,56 +67,148 @@ hospitals$VAL_DATE <- ymd_hms(hospitals$VAL_DATE)
 
 ## Measures of Central Tendency
 
-A measure of central tendency is a single numeric quantity describing data by identifying a central position within it. In this lab, we will calculate the mean and the median of values within our data. Under certain circumstances, one of these measurements can be more appropriate than the other for summarizing data. The frequency plots that we produced last week will help us to determine which measurement is more appropriate. Be sure to have them on hand to review as we move through this part of the assignment. 
+A measure of central tendency is a single numeric quantity describing data by identifying a central position within it. It summarizes values within a set into a single value. We often refer to such a value as an average. 
+
+At times, finding this measure can be quite useful __. However, we also need to be careful when relying on measures of central tendency to communicate information about our data. This is because measures of central tendency can be *reductionist* - reducing a complex story told across data to a single value. They can hide meaningful outliers and erase the nuance of a complicated narrative. For instance, measures of central tendency related to wealth in the US are likely to hide the experiences of the most impoverished communities. Such a measure can be a weapon for stakeholders combatting government policies to direct public resources towards communities in need. 
+
+Further, there are many pitfalls we need to steer clear of when assessing a measure of central tendency. Such a measure should only be taken to summarize the values across *similar observations.* If you have qualified units of observation, this will likely mean filtering your data to a set of similar values - to one year in the world_health_econ dataset for instance if you were looking to average populations across countries. 
+
+Let's say that we were looking to calculate the average number of beds in hospitals across the US. To do so, would it be appropriate to identify a central position within the BEDS variable in the dataset? Probably not. There are many different types of hospitals in the hospitals dataset, and we would expect these different hospitals to have different numbers of beds. For instance, we *know* from our research that Critical Access Hospitals are supposed to have 25 beds or fewer. In averaging across all of them, we would be measuring the center value of dissimilar observations. Before taking an average of BEDS, we would want to filter our data to a set of similar observations. We will do this below - filtering to open general acute care hospitals.
 
 ### Mean
 
-The most common measure of central tendency is a *mean* - the sum of a series of values divided by the number of values summed. This measure considers every value in a set of data and thus is a model of the entire set of data. Remember from lab four that we can do this with **summarize()** 
+A commomn measure of central tendency is a *mean* - the sum of a series of values divided by the number of values summed. This measure considers every value in a set of data and thus is a model of the entire set of data. Remember from lab five that we calculate mean with **summarize()**  Let's calculate the mean number of beds at open general acute care hospitals.
 
 ```{r}
 #df %>% summarize(mean_value = mean(NUMERIC_VARIABLE, na.rm = TRUE))
 
 hospitals %>% 
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
   summarize(mean_value = mean(BEDS, na.rm = TRUE))
-
-#Fill your code here. 
 ```
 
-> Note how we are choosing to ignore NA values above by calling na.rm = TRUE. When we do so, we need to keep in mind that we are not summarizing across all observations in the dataset, but only those for which there is a value listed in the variable we are operating on. Why might it be important to make communicate that we've made this move when we are presenting our data?
-
-Now, let's calculate the mean of a numeric variable in your dataset. 
+Similarly, if we wanted to know the mean number of Covid-19 cases per country, as we learned last week, we would need to group_by() the country and summarize() the total number of cases. Remember that this is because some cases are reported at the province level and some are reported at the country level. To ensure that we are taking a measure of central tendency across similar data, we need to ensure that all of the values we are summarizing are reported at one geographic scale - in this case, the country level. 
 
 ```{r}
-#Fill your code here. 
+#df %>% summarize(mean_value = mean(NUMERIC_VARIABLE, na.rm = TRUE))
+
+cases %>% 
+  group_by(Country.Region) %>%
+  summarize(Total.Cases = sum(Total.Cases, na.rm = TRUE)) %>%
+  ungroup() %>%
+  summarize(mean_value = mean(Total.Cases, na.rm = TRUE))
 ```
 
 ### Median
 
-Another measure of central tendency considers to the middle value in a dataset; this is referred to as the *median*. 
+Another measure of central tendency considers the middle value in a dataset; this is referred to as the *median*. Now let's calculate the median number of beds at open general acute care hospitals.
 
 ```{r}
 #df %>% summarize(median_value = median(NUMERIC_VARIABLE, na.rm = TRUE))
 
 hospitals %>% 
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
   summarize(median_value = median(BEDS, na.rm = TRUE))
 ```
 
-Let's calculate the median of a numeric variable in your dataset. 
+Let's also calculate the median number of Covid-19 cases per country.
+```{r}
+#df %>% summarize(mean_value = mean(NUMERIC_VARIABLE, na.rm = TRUE))
+
+cases %>% 
+  group_by(Country.Region) %>%
+  summarize(Total.Cases = sum(Total.Cases, na.rm = TRUE)) %>%
+  ungroup() %>%
+  summarize(median_value = median(Total.Cases, na.rm = TRUE))
+```
+
+Notice how there's a considerable difference between the mean and the median value across both of these sets of calculations. So which should we rely on to summarize the central location in our dataset? 
+
+We want to keep in mind that because the mean is a model of the entire dataset, it is easily influenced by outliers in the dataset, as well as a skewed distribution. When the distribution of values in a set is normal, the mean and median of the dataset will be the same because the values on either side of the middle value will be symmetrical. In other words, the distribution will be balanced on either side of the median. Frequency plots give us a good indication of the distribution of values the dataset. 
+
+```{r fig.height=5, fig.width=10}
+hospitals %>% 
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
+  ggplot(aes(x = BEDS)) +
+  geom_freqpoly(binwidth = 10) + 
+  labs(title = "Distribution of Beds across General Acute Care Hospitals in the US that are Open", x = "Beds", y = "Count of Hospitals") +
+  theme_bw()
+```
+
+
+```{r fig.height=5, fig.width=10}
+cases %>% 
+  group_by(Country.Region) %>%
+  summarize(Total.Cases = sum(Total.Cases, na.rm = TRUE)) %>%
+  ungroup() %>%
+  ggplot(aes(x = Total.Cases)) + 
+  geom_freqpoly(binwidth = 10000) +
+  labs(title = "Distribution of Cases across Countries", x = "Total Cases", y = "Count of Countries") + # To add titles and labels
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) + #Turn labels 90 degrees
+  scale_x_continuous(labels = scales::comma) #Change labels from scientific to comma notation
+```
+
+You'll notice in the hospitals and the cases dataset, the values of are significantly right-skewed. We can tell because the values represented on the plot are far from symmetrical. Instead, there is a long tail running to the right of the data. In such cases, the mean is going to be significantly influenced by the larger values in the data even though there are far fewer. 
+
+When the values in a frequency plot are skewed to the left or the right, we often want to rely on the median rather than the mean as a measure of central tendency, as it more clearly distinguishes the central location in the data. In the hospitals and the cases dataset, median is a better indicator of central tendency than the mean. However, both still significanltly gloss over the dispersion of values in the data. 
+
+We also need to be careful when taking measures of central tendency that we do not attempt to take an average of an average. Let me provide an exmaple of why this is inappropriate. Let's say I were to find the average number of beds at open general acute hospitals per state using group_by() and summarize().
+
+```{r}
+avg_by_state <- 
+  hospitals %>% 
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
+  group_by(STATE) %>%
+  summarize(mean_value = mean(BEDS, na.rm = TRUE)) %>%
+  ungroup() 
+
+avg_by_state
+```
+
+In taking the mean of the mean_value column we just created (i.e. an average of the state averages), you will notice that we get a different value than the mean we calculated above:
+
+```{r}
+#Mean of BEDS across all observations
+avg_across_all_obs <-
+  hospitals %>% 
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
+  summarize(mean_value = mean(BEDS, na.rm = TRUE))
+
+#Mean of BEDS across all state averages
+avg_across_state_avgs <-
+  avg_by_state %>%
+  summarize(mean_value = mean(mean_value, na.rm = TRUE))
+
+#Check if they are equal
+paste("When we check if", avg_across_all_obs, "(the mean of BEDS across all observations) is equal to", avg_across_state_avgs, "(the mean of BEDS across state averages) the result is", avg_across_all_obs == avg_across_state_avgs)
+```
+
+This is because when we take an average of averages, we are ignoring a key confounding variable - the size of the denominator in each of the state averages. We know that there are different numbers of hospitals in each state. When we take the mean across all state averages, we basically ignore this variable - producing a different mean than if we were to calculate mean across all observations in the set. This can have dramatic consequences on the values reported in our data. 
+
+Please watch this short video on Simpon's Paradox to learn more about the importance of avoiding this pitfall:
+
+<iframe width="560" height="315" src="https://youtu.be/embed/ebEkn-BiW5k" frameborder="0" allowfullscreen></iframe>
+
+This is an issue we would need to keep in mind when calculating measures of central tendency in our world_health_econ dataset. The majority of the variables reported in the world_health_econ dataset are already averages - either averages across the population of the country or averages across the country's total spending on health. Because of this, it would be inappropriate to calculate measures of central tendency across these variables without knowing their denominators. 
+
+> You might be thinking, "Well don't we have population as another variable in the dataset. Doesn't that tell us the denominator of some of the averages?" That is corret. However, looking at our data dictionary you will notice that the population variable in the dataset is derived from a different source than the health economics indicators. While we can expect these numbers to be in proximity, different organizations count the number of people in a country differently. This value might not accurately reflect the denominator of many of our health economics indicators. 
+
+### Measures of Central Tendency in your Own Dataset
+
+#### Calculate the mean and median of a numeric variable in your dataset. 
+
+Be sure to filter your dataset to ensure that you are summarizing across similar observations. Also be sure to avoid averaging an average.  
 
 ```{r}
 #Fill your code here. 
 ```
 
-You'll notice in the hospitals dataset, there's a considerable difference between the mean and the median value. So which should we rely on to summarize the central location in our dataset? 
+What question might these measures of central tendency help to address?
 
-We want to keep in mind that because the mean is a model of the entire dataset, it is easily influenced by outliers in the dataset, as well as a skewed distribution. When the distribution of values in a variable is normal, the mean and median of the dataset will be the same because the values on either side of the middle value will be symmetrical. In other words, the distribution will be balanced on either side of the median. Frequency plots give us a good indication of the distribution of values the dataset. 
-
-```{r fig.height=5, fig.width=10}
-hospitals %>% 
-  ggplot(aes(x = BEDS)) +
-  geom_freqpoly(binwidth = 10)
+```{r eval=FALSE}
+Fill your response here. 
 ```
-You'll notice in the hospitals dataset, the values of beds are significantly right-skewed. We can tell because the values represented on the plot are far from symmetrical. Instead, there is a long tail running to the right of the data, indicating that, while a considerable majority of hospitals have fewer than 500 beds available, there are at least a few hospitals that have up to 1600 beds available. In such cases, the mean is going to be significantly influenced by the larger values in the data even though there are far fewer. 
 
 Create a frequency plot of the numeric variable you produced calculations of above. (You may have created this last week, and you may copy and paste it from the previous lab.)
 
@@ -117,38 +216,60 @@ Create a frequency plot of the numeric variable you produced calculations of abo
 #Create a frequency plot here. 
 ```
 
-Characterize the distribution of values in the frequency plot you created. Is it symmetrical or skewed?
+Characterize the distribution of values in the frequency plot you created. Is it symmetrical or skewed? 
 
 ```{r eval=FALSE}
 Fill your response here. 
 ```
 
-When the values in a frequency plot are skewed to the left or the right, we often want to rely on the median rather than the mean as a measure of central tendency, as it more clearly distinguishes the central location in the data. In the hospitals dataset, median is a better indicator of central tendency than the mean. Which value is more appropriate as a measure of central tendency in your data? 
+Which value is more appropriate as a measure of central tendency in your data? 
 
 ```{r eval=FALSE}
 Fill your response here. 
 ```
 
-Characterize the extent to which the value you selected as a measure of central tendency above (mean or median) is representative of your data. What story is told when we rely on this number as a summary of the data? If we were to use this single value to summarize this variable, what narratives would be left out?
+Characterize the extent to which the value you selected as a measure of central tendency above (mean or median) is representative of your data. What story is told when we rely on this number as a summary of the data? 
 
 ```{r eval=FALSE}
 Fill your response here. 
 ```
 
-Note that we can see all of the values we calculated above with the summary() function we worked with in lab four. 
+If we were to use this single value to summarize this variable, what narratives would be left out? How does the complexity of the narratives in your data get reduced in calculating this value. 
 
-```{r}
-#df %>% select(NUMERIC_VARIABLE) %>% summary()
-
-hospitals %>% 
-  select(POPULATION) %>% 
-  summary()
+```{r eval=FALSE}
+Fill your response here. 
 ```
 
-Select another numeric variable in your dataset and call summary() on it.
+#### Select another numeric variable in your dataset and calculate both the mean and the median. 
+
+Be sure to filter your dataset to ensure that you are summarizing across similar observations. Also be sure to avoid averaging an average. 
 
 ```{r}
 #Fill your code here. 
+```
+
+What question might these measures of central tendency help to address?
+
+```{r eval=FALSE}
+Fill your response here. 
+```
+
+Create a frequency plot of the numeric variable you produced calculations of above. (You may have created this last week, and you may copy and paste it from the previous lab.)
+
+```{r fig.height=5, fig.width=10}
+#Create a frequency plot here. 
+```
+
+Characterize the distribution of values in the frequency plot you created. Is it symmetrical or skewed? 
+
+```{r eval=FALSE}
+Fill your response here. 
+```
+
+Which value is more appropriate as a measure of central tendency in your data? 
+
+```{r eval=FALSE}
+Fill your response here. 
 ```
 
 What story do these calculations tell? Would you select the median or the mean as a measure of central tendency? Why?
@@ -157,19 +278,19 @@ What story do these calculations tell? Would you select the median or the mean a
 Fill your response here. 
 ```
 
-Characterize the extent to which the value you selected as a measure of central tendency above is representative of your data. If we were to use this single value to summarize this variable, what narratives would be left out?
+Characterize the extent to which the value you selected as a measure of central tendency above is representative of your data. 
 
 ```{r eval=FALSE}
 Fill your response here. 
 ```
 
-As we've been discussing in class, any measure that we calculate is mediated by the way the phenomena we are measuring gets defined. How was the numeric variable that you selected defined? What is included in this definition, and what potentially relevant values are excluded?
+If we were to use this single value to summarize this variable, what narratives would be left out? How does the complexity of the narratives in your data get reduced in calculating this value. 
 
 ```{r eval=FALSE}
 Fill your response here. 
 ```
 
-Who has stakes in how this variable gets defined? In what way might these stakes influence the measures that we have calculated?
+As we've been discussing in class, any measure that we calculate is mediated by the way the phenomena we are measuring gets defined. How were the numeric variables that you selected defined? What was included in these definitions, and what potentially relevant values were excluded?
 
 ```{r eval=FALSE}
 Fill your response here. 
@@ -177,40 +298,27 @@ Fill your response here.
 
 ## Measures of Dispersion
 
-Measures of dispersion help us to understand how spread out the values in our dataset are - their variations from each other and from the data's mean. 
+Measures of dispersion help us to understand how spread out the values in our dataset are - their variations from each other and from the data's center. Like measures of central tendency, measures of dispersion should be taken across a set of data with similar values. This often means filtering our data to those that represent a similar set of observations.
 
 ### Ranges
 
-We can also use summarize to find the max value, min value, and range of values in a numeric variable. 
+The range of data refers to the difference between the maximum value in a set and the minimum value in a set. We can also use summarize() to find the max value, min value, and range of values in a numeric variable. 
 
 ```{r}
 #df %>% summarize(max_value = max(NUMERIC_VARIABLE, na.rm = TRUE))
 hospitals %>% 
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
   summarize(max_value = max(BEDS, na.rm = TRUE))
 
 #df %>% summarize(min_value = min(NUMERIC_VARIABLE, na.rm = TRUE))
 hospitals %>% 
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
   summarize(min_value = min(BEDS, na.rm = TRUE))
 
 #df %>% summarize(range = max(NUMERIC_VARIABLE, na.rm = TRUE) - min(NUMERIC_VARIABLE, na.rm = TRUE))
 hospitals %>% 
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
   summarize(range = max(BEDS, na.rm = TRUE) - min(BEDS, na.rm = TRUE))
-```
-
-Select a numeric variable in your dataset and calculate the maximum value, the minimum value, and the range of values within that variable.
-
-```{r}
-#Fill your code to calculate max here. 
-
-#Fill your code to calculate min here. 
-
-#Fill your code to calculate range here. 
-```
-
-Do the numbers surprise you? What insight can you draw from this calculation?
-
-```{r eval=FALSE}
-Fill your response here. 
 ```
 
 ### Quartile Deviation
@@ -219,26 +327,20 @@ Even though we are introducing the boxplot in relation to quartile deviation, it
 
 The further the 1st and 3rd quartile are from the median (or, in other words, the wider the box), the greater the *quartile deviation.* In general, a narrower box and whiskers indicates less dispersion in the data, while a wider box and whiskers indicates greater dispersion.  
 
+Let's use a boxplot to check out the quartile deviation of beds in open general acute care hospitals in the US.
 ```{r fig.height=5, fig.width=5}
 #df %>% ggplot(aes(y = NUMERIC_VARIABLE)) + geom_boxplot() + theme_bw()
 
 hospitals %>%
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
   ggplot(aes(y = BEDS)) +
   geom_boxplot() +
+  labs(title = "Distribution of Beds across General Acute Care Hospitals in the US that are Open", y = "Beds") +
   theme_bw()
 ```
+> Note how we can title a boxplot very similarly to how we title a frequency plot. Both show distributions of values. 
 
-Let's create a boxplot for one of your numeric variables below.
-
-```{r fig.height=5, fig.width=5}
-#Fill your plot here. Be sure to add a title and labels to your plot. 
-```
-
-What insight can you draw from the plot you created?
-
-```{r eval=FALSE}
-Fill your response here. 
-```
+We can see from this plot that the quartile deviation is much smaller than the range in our dataset. This suggests that centered values are more concentrated than the extremes. 
 
 ### Standard Deviation
 
@@ -248,19 +350,66 @@ Fill your response here.
 #df %>% summarize(sd_value = sd(NUMERIC_VALUE, na.rm = TRUE))
 
 hospitals %>% 
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
   summarize(sd_value = sd(BEDS, na.rm = TRUE))
-
-cases %>% 
-  group_by(Country.Region) %>%
-  summarize(country_total = sum(Total.Cases, na.rm = TRUE)) %>%
-  ungroup() %>%
-  summarize(sd_value = sd(country_total, na.rm = TRUE))
 ```
 
-Let's calculate the standard deviation with your data. Note that you may need to group_by(), summarize a total and then ungroup() to ensure that you are performing this calculation across values reported at the same scale.
+### Measures of Dispersion in Your Own Dataset
 
+#### Select one of the numeric variables on which you calculated a measure of central tendency above, and calculate the maximum value, the minimum value, and the range of values within that variable.
+
+Be sure to filter your dataset to ensure that you are summarizing across similar observations. 
+```{r}
+#Fill your code to calculate max here. 
+
+#Fill your code to calculate min here. 
+
+#Fill your code to calculate range here. 
+```
+
+What question might this measure of dispersion help to address?
+
+```{r eval=FALSE}
+Fill your response here. 
+```
+
+Do the numbers surprise you? What insight can you draw from this calculation?
+
+```{r eval=FALSE}
+Fill your response here. 
+```
+
+#### Create a boxplot for one of the numeric variables on which you calculated a measure of central tendency above.
+
+Be sure to filter your dataset to ensure that you are plotting across similar observations. 
+```{r fig.height=5, fig.width=5}
+#Fill your plot here. Be sure to add a title and labels to your plot. 
+```
+
+What question might this measure of dispersion help to address?
+
+```{r eval=FALSE}
+Fill your response here. 
+```
+
+What insight can you draw from the plot you created?
+
+```{r eval=FALSE}
+Fill your response here. 
+```
+
+
+### Calculate the standard deviation for one of the numeric variables on which you calculated a measure of central tendency above.
+
+Be sure to filter your dataset to ensure that you are summarizing across similar observations. 
 ```{r}
 #Fill your code here.
+```
+
+What question might this measure of dispersion help to address?
+
+```{r eval=FALSE}
+Fill your response here. 
 ```
 
 What insight can you draw from this calculation?
@@ -279,37 +428,61 @@ Fill your response here.
 
 Like we learned in regards to co-variation, some of the most interesting information we can gain from our data is how values change depending on where in the data we are looking. 
 
-ggplot's geom_boxplot feature is particularly good at comparing measures of dispersion across grouped values in a categorical variable. It is set up to visualize several boxplots side-by-side. Let's take a look at how we could compare dispersions in the number of hospital beds available by hospital ownership. 
+### Boxplots
+
+ggplot's geom_boxplot feature is particularly good at comparing measures of dispersion across grouped values in a categorical variable. It is set up to visualize several boxplots side-by-side. When we do have dissimilar observations in our dataset, this is a way to compare the dispersion of values across them. Let's take a look at how we could compare dispersions in the number of hospital beds available by hospital ownership. 
 
 ```{r fig.height=5, fig.width=10}
 #df %>% ggplot(aes(x = CATEGORICAL_VARIABLE, y = NUMERIC_VARIABLE)) + geom_boxplot()
 
 hospitals %>%
-  ggplot(aes(x = OWNER, y = BEDS)) +
+  filter(STATUS == "OPEN") %>%
+  ggplot(aes(x = TYPE, y = BEDS)) +
   geom_boxplot() +
+  labs(title = "Distribution of Beds across Hospitals in the US that are Open by Type", x = "Type", Y = "Beds") +
   theme_bw() +
   theme(axis.text.x = element_text(angle = 90, hjust=1)) + #Changes x-axis tick labels 90 degrees
   coord_flip() #Flips the x and y axis to make the data easier to read and compare
+
+```
+We can also filter our data to similar values and the compare dispersions across another category. 
+
+```{r fig.height=5, fig.width=10}
+#df %>% ggplot(aes(x = CATEGORICAL_VARIABLE, y = NUMERIC_VARIABLE)) + geom_boxplot()
+
+hospitals %>%
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
+  ggplot(aes(x = OWNER, y = BEDS)) +
+  geom_boxplot() +
+  labs(title = "Distribution of Beds across Hospitals in the US that are Open by Type", x = "OWNER", Y = "Beds") +
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) + #Changes x-axis tick labels 90 degrees
+  coord_flip() #Flips the x and y axis to make the data easier to read and compare
+
 ```
 
-We see above that there is a greater dispersion in the number of beds available at state hospitals, non-profit hospitals, and federal hospitals. We also see that, in local hospitals, the median is very close to the first quartile, indicating that the data is going to be considerably right-skewed. Compare this to federal hospitals, where the median is more centered in the box (and there are few outliers). We are likely to see a bit more of a normal distribution in this data. Let's confirm this.
+We see above that there is a greater dispersion in the number of beds available at state hospitals and non-profit hospitals. We also see that, in local hospitals, the median is closer to the first quartile than in other plots, and there are a number of outliers, indicating that the data is going to be more right skewed than in other plots right-skewed. Compare this to federal hospitals, where the median is more centered in the box (and there are few outliers). We are likely to see a less skewed distribution in this plot. Let's confirm this.
 
 ```{r fig.height=5, fig.width=5}
 hospitals %>%
-  filter(OWNER == "GOVERNMENT - LOCAL") %>%
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE" & OWNER == "GOVERNMENT - LOCAL") %>%
   ggplot(aes(x = BEDS)) +
-  geom_freqpoly(binwidth = 10) +
+  geom_freqpoly(binwidth = 25) +
+  labs(title = "Distribution of Beds across Open General Acute Care Local Hospitals in the US", x = "Beds", y = "Count of Hospitals") + # To add titles and labels
   theme_bw()
 
 hospitals %>%
-  filter(OWNER == "GOVERNMENT - FEDERAL") %>%
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE" & OWNER == "GOVERNMENT - FEDERAL") %>%
   ggplot(aes(x = BEDS)) +
-  geom_freqpoly(binwidth = 10) +
+  geom_freqpoly(binwidth = 25) +
+  labs(title = "Distribution of Beds across Open General Acute Care Federal Hospitals in the US", x = "Beds", y = "Count of Hospitals") + # To add titles and labels
   theme_bw()
 ```
+We can see above how the distribution in the second plot is a bit more normal than the distribution in the first, confirming what we concluded above. 
 
-Create a grouped boxplot for your dataset below.
+### Create a grouped boxplot for your dataset below.
 
+Be sure to filter your dataset to ensure that you are summarizing across similar observations **or** ensure that each group is made up of similar observations. 
 ```{r fig.height=5, fig.width=10}
 #Fill your code here. Add a title and labels to your plot. 
 ```
@@ -326,85 +499,6 @@ How does the story that this grouped boxplot tells differ from the story told by
 Fill your response here. 
 ```
 
-Sometimes, we also want to graphically represent a calculation that we perform for a grouped categorical variable. For instance, let's say I wanted to show the median number of beds available grouped by the hospital owner. To do this, I need to calculate the median of the BEDS variable for each OWNER. One way to do this is to group_by(OWNER), summarize the median of BEDS, and then plot the resulting data frame. We discussed how to group_by() and summarize() in lab 4, and a ggplot call can be appended to these functions with a pipe (%>%) to plot them. However, here we can also use stat_summary(), in conjunction with a function. We will plot the median as a column plot by setting the geom = "col".
-
-```{r fig.height=5, fig.width=10}
-#df %>% ggplot(aes(x = CATEGORICAL_VARIABLE, y = NUMERIC_VARIABLE)) + stat_summary(geom = "col", fun.y = "median")
-
-hospitals %>%
-  ggplot(aes(x = OWNER, y = BEDS)) +
-  stat_summary(geom = "col", fun.y = "median") +
-  theme_bw() + # To change the plot theme
-  theme(axis.text.x = element_text(angle = 90, hjust=1)) + # To turn x-axis ticks 90 degrees
-  scale_y_continuous(labels = scales::comma)  # To set x-axis ticks to comma notation
-```
-
-We can apply functions other than median in stat_summary(). Let's graphically represent the total number of beds for each owner. 
-
-```{r fig.height=5, fig.width=10}
-hospitals %>%
-  ggplot(aes(x = OWNER, y = BEDS)) +
-  stat_summary(geom = "col", fun.y = "sum") + #fun.y tells ggplot to perform this function on the y-variable
-  theme_bw() + # To change the plot theme
-  theme(axis.text.x = element_text(angle = 90, hjust=1)) + # To turn x-axis ticks 90 degrees
-  scale_y_continuous(labels = scales::comma)  # To set x-axis ticks to comma notation
-```
-
-I can group these calculations further using the *fill* aesthetic. Below we create three plots by setting the fill aesthetic to the hospitals' TYPE. Depending on the *position* attribute, we can create either a stacked column plot, a dodged column plot, or a filled column plot (which shows proportions of totals versus actual totals. )
-
-```{r fig.height=5, fig.width=10}
-#Stacked column plot of the total hospital beds by owner and type
-hospitals %>%
-  ggplot(aes(x = OWNER, y = BEDS, fill = TYPE)) +
-  stat_summary(geom = "col", fun.y = "sum") +
-  theme_bw() + # To change the plot theme
-  theme(axis.text.x = element_text(angle = 90, hjust=1)) + # To turn x-axis ticks 90 degrees
-  scale_y_continuous(labels = scales::comma)  # To set x-axis ticks to comma notation
-
-#Dodged column plot of the total hospital beds by owner and type
-hospitals %>%
-  ggplot(aes(x = OWNER, y = BEDS, fill = TYPE)) +
-  stat_summary(geom = "col", fun.y = "sum", position = "dodge") +
-  theme_bw() + # To change the plot theme
-  theme(axis.text.x = element_text(angle = 90, hjust=1)) + # To turn x-axis ticks 90 degrees
-  scale_y_continuous(labels = scales::comma)  # To set x-axis ticks to comma notation
-
-#Filled column plot of the total hospital beds by owner and type
-hospitals %>%
-  ggplot(aes(x = OWNER, y = BEDS, fill = TYPE)) +
-  stat_summary(geom = "col", fun.y = "sum", position = "fill") +
-  theme_bw() + # To change the plot theme
-  theme(axis.text.x = element_text(angle = 90, hjust=1)) + # To turn x-axis ticks 90 degrees
-  scale_y_continuous(labels = scales::comma)  # To set x-axis ticks to comma notation
-
-```
-
-Using stat_summary() in conjunction with a function, create three column plots below. If using the sum function, experiment with the fill and the position. 
-
-```{r fig.height=5, fig.width=10}
-#Create your first plot here. Be sure to add a title and labels. 
-```
-
-```{r fig.height=5, fig.width=10}
-#Create your second plot here. Be sure to add a title and labels. 
-```
-
-```{r fig.height=5, fig.width=10}
-#Create your third plot here. Be sure to add a title and labels. 
-```
-
-Summarize what you learn from these three plots. 
-
-```{r eval=FALSE}
-Fill your response here. 
-```
-
-Which social groups might be interested in each of the plots that you produced? Why would they be interested in these plots?
-
-```{r eval=FALSE}
-Fill your response here. 
-```
-
 ## Continue your shiny app.
 
 Now we will incorporate some of the values we calculated and some of the plots we produced above into the Shiny App. In the server function, follow the instructions in the comments to create three value boxes in your app. You will also place two more plots in the app. Don't worry about styling the app. That will be the focus of a later lab. 
@@ -415,7 +509,7 @@ ui <- dashboardPage(
   dashboardHeader(title = "TITLE HERE"),
   
   dashboardSidebar(
-    #inputs will go here. 
+    #EVENTUALLY INPUTS WILL GO HERE. 
   ),
   
   dashboardBody(
@@ -483,5 +577,66 @@ server <- function(input, output, session) {
 
 ```{r}
 shinyApp(ui, server)
+```
+
+--- 
+# ASSIGNMENT ENDS HERE. 
+--- 
+## More examples and Useful Functions (This is only for reference.)
+
+### stat_summary()
+
+Sometimes, we also want to graphically represent a calculation that we perform for a grouped categorical variable. For instance, let's say I wanted to show the median number of beds available in open general acute care hospitals grouped by the hospital owner. To do this, I need to calculate the median of the BEDS variable for each OWNER. One way to do this is to group_by(OWNER), summarize the median of BEDS, and then plot the resulting data frame. We discussed how to group_by() and summarize() in lab 4. A ggplot call can be appended to these functions with a pipe (%>%) to plot them. However, here we can also use stat_summary(), in conjunction with a function. We will plot the median as a column plot by setting the geom = "col". Again, to ensure that we are calculating across similar observations, we will filter our data to open general acute care hospitals.
+
+```{r fig.height=5, fig.width=10}
+#df %>% ggplot(aes(x = CATEGORICAL_VARIABLE, y = NUMERIC_VARIABLE)) + stat_summary(geom = "col", fun.y = "median")
+
+hospitals %>%
+  filter(STATUS == "OPEN" & TYPE == "GENERAL ACUTE CARE") %>%
+  ggplot(aes(x = OWNER, y = BEDS)) +
+  stat_summary(geom = "col", fun.y = "median") +
+  theme_bw() + # To change the plot theme
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) + # To turn x-axis ticks 90 degrees
+  scale_y_continuous(labels = scales::comma)  # To set x-axis ticks to comma notation
+```
+
+We can apply functions other than median in stat_summary(). Let's graphically represent the total number of beds for each owner. 
+
+```{r fig.height=5, fig.width=10}
+hospitals %>%
+  ggplot(aes(x = OWNER, y = BEDS)) +
+  stat_summary(geom = "col", fun.y = "sum") + #fun.y tells ggplot to perform this function on the y-variable
+  theme_bw() + # To change the plot theme
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) + # To turn x-axis ticks 90 degrees
+  scale_y_continuous(labels = scales::comma)  # To set x-axis ticks to comma notation
+```
+
+I can group these calculations further using the *fill* aesthetic. Below we create three plots by setting the fill aesthetic to the hospitals' TYPE. Depending on the *position* attribute, we can create either a stacked column plot, a dodged column plot, or a filled column plot (which shows proportions of totals versus actual totals. )
+
+```{r fig.height=5, fig.width=10}
+#Stacked column plot of the total hospital beds by owner and type
+hospitals %>%
+  ggplot(aes(x = OWNER, y = BEDS, fill = TYPE)) +
+  stat_summary(geom = "col", fun.y = "sum") +
+  theme_bw() + # To change the plot theme
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) + # To turn x-axis ticks 90 degrees
+  scale_y_continuous(labels = scales::comma)  # To set x-axis ticks to comma notation
+
+#Dodged column plot of the total hospital beds by owner and type
+hospitals %>%
+  ggplot(aes(x = OWNER, y = BEDS, fill = TYPE)) +
+  stat_summary(geom = "col", fun.y = "sum", position = "dodge") +
+  theme_bw() + # To change the plot theme
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) + # To turn x-axis ticks 90 degrees
+  scale_y_continuous(labels = scales::comma)  # To set x-axis ticks to comma notation
+
+#Filled column plot of the total hospital beds by owner and type
+hospitals %>%
+  ggplot(aes(x = OWNER, y = BEDS, fill = TYPE)) +
+  stat_summary(geom = "col", fun.y = "sum", position = "fill") +
+  theme_bw() + # To change the plot theme
+  theme(axis.text.x = element_text(angle = 90, hjust=1)) + # To turn x-axis ticks 90 degrees
+  scale_y_continuous(labels = scales::comma)  # To set x-axis ticks to comma notation
+
 ```
 
