--- a/lab8.Rmd
+++ b/lab8.Rmd
@@ -1,16 +1,21 @@
 ---
-title: "Lab 8 - Presenting Data"
+title: "Lab 8 - Summarizing Insights and Data Gaps"
 output: 
-  github_document:
-    toc: true
-    toc_depth: 2
-editor_options: 
+  html_notebook:
+    toc: yes
+    toc_depth: 3
+    toc_float: yes
+  html_document:
+    df_print: paged
+    toc: yes
+    toc_depth: '3'
+editor_options:
   chunk_output_type: inline
 ---
 
 ## Instructions and Overview
 
-At this point in the quarter, we have produced a number of plots and calculate a number of measures in regards to our data. Now, we're going to explore in more depth how the stories the data tell change depending on where we look. This exploration will turn into user inputs in our Shiny app. 
+In this lab, you will refer to the plots you created in each of your previous labs to summarize insights and critiques of the dataset you've been analyzing. This text will be added to an "About" page on your data dashboard.  
 
 ## Getting Started
 
@@ -23,34 +28,6 @@ library(shinydashboard)
 library(shinyWidgets)
 ```
 
-### Import and clean example datasets 
-```{r}
-hospitals <- read.csv("https://raw.githubusercontent.com/lindsaypoirier/STS-115/master/datasets/Hospitals.csv", stringsAsFactors = FALSE)
-
-cases <- read.csv("https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv", stringsAsFactors = FALSE)
-
-#Do not worry about this line of code for now. Since the cases data gets appended every day with a new column representing that day's case counts, if we want the total cases per country, we need to add up all of the previous day's counts into a new column. The column below does this for us. 
-cases <- 
-  cases %>% 
-  mutate(Total.Cases = 
-           cases %>% 
-           select(starts_with("X")) %>% 
-           rowSums()
-         ) %>%
-  select(Province.State, Country.Region, Total.Cases)
-
-hospitals$ZIP <- as.character(hospitals$ZIP)
-
-hospitals$ZIP <- str_pad(hospitals$ZIP, 5, pad = "0") 
-
-is.na(hospitals) <- hospitals == "NOT AVAILABLE"
-is.na(hospitals) <- hospitals == -999
-is.na(cases) <- cases == ""
-
-hospitals$SOURCEDATE <- ymd_hms(hospitals$SOURCEDATE)
-hospitals$VAL_DATE <- ymd_hms(hospitals$VAL_DATE)
-```
-
 ### Import and clean your dataset. 
 ```{r}
 #Copy and paste relevant code from Lab 4 to import your data here. 
@@ -58,242 +35,148 @@ hospitals$VAL_DATE <- ymd_hms(hospitals$VAL_DATE)
 #Copy and paste relevant code from Lab 4 to clean your data here. This includes any row binding, character removals, converions in variable type, date formatting, or NA conversions. 
 ```
 
-## Facets
+## Summarize Insights
 
-To get us started in putting our data into context, we are going to look at some of the plots we produced in previous labs grouped according to a categorical variable in our dataset. 
+In about 500 words, describe how your understanding of your topic has advanced as a result of your research. Reference specific statistics, plots, or tables in this section to communicate what key insights you were able to draw from the data. Some things to consider as you are writing this section:
 
-By *faceting* plots, we split them into a series of panels each representing the grouped data associated with a particular value in a categorical variable. Let's start with an easy example from our hospitals data - faceting a bar plot of the number of hospitals that have a helipad by state. 
-
-```{r fig.height=5, fig.width=10}
-#df %>% ggplot(aes(x = CATEGORICAL_VARIABLE)) + geom_bar() + facet_wrap(~CATEGORICAL_VARIABLE)
-
-#without facet_wrap()
-hospitals %>% 
-  ggplot(aes(x = HELIPAD)) + 
-  geom_bar() +
-  theme_bw()
-
-#with facet_wrap()
-hospitals %>% 
-  ggplot(aes(x = HELIPAD)) + 
-  geom_bar() +
-  facet_wrap(~STATE) +
-  theme_bw() +
-  theme(axis.text.x = element_text(angle = 45, hjust=1, size = 6), 
-        axis.text.y = element_text(size = 6),
-        strip.text = element_text(size = 6)) 
-  
-```
-
-The first plot suggests that more hospitals have helipads than those that don't. Grouping this by state, however, we can see that in some states (like California and New York), more hospitals don't have helipads than those that do. Faceting can help us zoom into the data for more geographic specificity. 
-
-Let's also facet data by a temporal variable. Assuming we have already converted a date/time variable in our dataset into a data/time format (using lubridate in lab 4), we should be able to extract a year, month, day (and if available hour, minute, and second) from the data using these lubridate functions:
-
-* year(DATE_VARIABLE) will extract the year from the date
-* month(DATE_VARIABLE) will extract the month from the date
-* day(DATE_VARIABLE) will extract the day from the date
-* ... and so on
-
-
-```{r}
-#without facet_wrap()
-hospitals %>% 
-  ggplot(aes(x = STATUS)) + 
-  geom_bar() +
-  theme_bw()
-
-#with facet_wrap()
-hospitals %>% 
-  ggplot(aes(x = STATUS)) + 
-  geom_bar() +
-  facet_wrap(~year(SOURCEDATE)) +
-  theme_bw() +
-  theme(axis.text.x = element_text(angle = 45, hjust=1, size = 6), 
-        axis.text.y = element_text(size = 6),
-        strip.text = element_text(size = 6)) 
-```
-Faceting this plot by the year in which the data was sourced helps put the STATUS field into context. We can see that the vast majority of the data represented in the plot was sourced in 2018. We know that hospitals across the country are not open or closed in perpetuity, so we need to take the temporal context of the data into consideration when presenting our results. 
-
-Copy and paste a plot from one of your previous labs. Then copy it again and facet it by a geographic or temporal variable. 
-
-```{r fig.height=5, fig.width=10}
-#df %>% ggplot(aes(x = CATEGORICAL_VARIABLE)) + geom_bar() + facet_wrap(~CATEGORICAL_VARIABLE)
-
-#Copy and paste a previoulsy created plot here. 
-
-#Copy that plot again and facet it by a geographic or temporal variable. Adjust the theme as I have above to make your plot more legible.  
-```
-
-How do the stories that the two plots tell differ? What does your first plot tell you about the geo-political landscape of the issue you are studying? - OR - What does the first plot tell you about the temporal landscape of the issue you are studying?
+1. Be sure to contextualize your findings in the appropriate temporal and geographic context. If your dataset is about the average age of homeowners, and it only spans from 2012-2015 and covers the state of CA:
+  * Imprecise: "There are more general acute care hospitals than any other hospital."
+  * Better: "Based on data aggregated from government sources by Oak Ridge National Laboratory since 2012, there are more general acute care hospitals in the United States than any other type of hospital."
+2. Make a clear distinction between what the data empirically shows you and how you interpret the results. Again, imagine that your dataset is about the average age of homeowners:
+  * Imprecise: "This data indicates that many hospitals do not have enough beds to take on new patients." 
+  * Better: "According to this data, the median number of beds at general acute hospitals in the US is 139. Comparing this to the case rates in the US since January, this suggests that many hospitals will not have enough beds available to take on the influx in patients."
+3. Consider your data issues:
+  * Imprecise: "From January to present the growth of the Covid-19 cases has increased most dramatically in the US."
+  * Better: "From January to present the growth of the Covid-19 cases has increased most dramatically in the US. However, since the case data is only as accurate as the portion of the population being test and countries are testing at different capacities, this measure may be imprecise."
 
 ```{r eval=FALSE}
 Fill your response here. 
 ```
 
-Repeat the exercise you completed above for a second plot you created in a previous lab.  
+## Characterize Knowledge Gaps
 
-```{r fig.height=5, fig.width=10}
-#df %>% ggplot(aes(x = CATEGORICAL_VARIABLE)) + geom_bar() + facet_wrap(~CATEGORICAL_VARIABLE)
-
-#Copy and paste a previoulsy created plot here. 
-
-#Copy that plot again and facet it by a geographic or temporal variable. Adjust the theme as I have above to make your plot more legible.  
-```
-
-How do the stories that the two plots tell differ? What does your second plot tell you about the geo-political landscape of the issue you are studying? - OR - What does the second plot tell you about the temporal landscape of the issue you are studying?
+In what ways might the data in your dataset be inaccurate? Describe in specific detail how these inaccuracies might affect your data analysis. Reference a specific analysis you've completed (either through transformation or plotting), and describe how this issue might impact how you interpret your data analysis.
 
 ```{r eval=FALSE}
 Fill your response here. 
 ```
 
-Repeat the exercise you completed above for a third plot you created in a previous lab.  
-
-```{r fig.height=5, fig.width=10}
-#df %>% ggplot(aes(x = CATEGORICAL_VARIABLE)) + geom_bar() + facet_wrap(~CATEGORICAL_VARIABLE)
-
-#Copy and paste a previoulsy created plot here. 
-
-#Copy that plot again and facet it by a geographic or temporal variable. Adjust the theme as I have above to make your plot more legible. 
-```
-
-How do the stories that the two plots tell differ? What does your third plot tell you about the geo-political landscape of the issue you are studying? - OR - What does the third plot tell you about the temporal landscape of the issue you are studying?
+In what ways might your dataset be incomplete or non-representative of the extent of the issues? Describe in specific detail how the data's incompleteness might affect your data analysis.  Reference a specific analysis you've completed (either through transformation or plotting), and describe how this issue might impact how you interpret your data analysis.
 
 ```{r eval=FALSE}
 Fill your response here. 
 ```
 
-## The Importance of Place and Time
-
-Time and place often matter a great deal in how we interpret data. To get us started in thinking about why, let's walk through a few examples:
-
-### Case Study 1: Covid-19 Case Reporting by Country
-
-Let's take a look at the number of Covid-19 cases reported each day by each country. To do so, we will be reimporting the cases data as a time series - that is, as a dataset that reports the number of cases per day. On import, every column represents a specific date and the case totals for that date are the values stored in that column. 
-```{r}
-cases_time_series <- read.csv("https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv", stringsAsFactors = FALSE)
-
-head(cases_time_series)
-```
-
-When dates are stored as column names and not as values in and of themselves, it can be very difficult to manipulate the data based on dates. Remember that column names are not data in and of themselves but a reference to a vector of values. The dates in this dataset are a reference to a vector of case numbers. Because the date values are not represented *in* the data, but only as a reference to case numbers, we can't filter observations to specific dates or to dates that happened before or after another date. The code below reshapes the data so that such filtering is possible.  Using **gather()**, for every province/country in the dataset, a new row will be created in the dataset for every date data was reported. The reshaped data will have two new columns: Case.Date (the date reported) and Cases (the number reported on that date). Basically, we will take wide data (many columns with fewer rows), and reshape it into long data (fewer columns with more rows). 
-
-If you'd like to know more about how to use gather() to create tidy data, I highly recommend [this](https://r4ds.had.co.nz/tidy-data.html) chapter in R for Data Science.
-
-You'll also not above that R automatically places an "X" character in front of numeric column names. Below we remove that X character and then we transform the values into a date-time format.   
-
-```{r}
-cases_time_series <- cases_time_series %>% 
-  gather(key = "Case.Date", value = "Cases", -Province.State, -Country.Region, -Lat, -Long) %>%
-  mutate(Case.Date = str_remove(Case.Date, pattern = "X")) %>%
-  mutate(Case.Date = mdy(Case.Date))
-
-head(cases_time_series)
-```
-
-Now let's plot the total number of cases reported each day, faceted by country. 
-
-```{r fig.height=8, fig.width=10}
-cases_time_series %>% 
-  ggplot(aes(x = Case.Date, y = Cases)) + 
-  stat_summary(geom = "col", fun.y = "sum") + 
-  facet_wrap(~Country.Region) +
-  theme_bw() +
-  theme(axis.text.x = element_text(angle = 45, hjust=1, size = 6), 
-        axis.text.y = element_text(size = 6),
-        strip.text = element_text(size = 6)) 
-```
-
-One observation that might stand out in this plot is just how few cases were reported in Russia through mid-March. As of March 24, 2020, Russia had reported fewer than 500 cases of Covid-19. For a country covering more than 6 million square miles, with a population of 145 million, and in such close proximity to China where the case counts are highest, these numbers are surprisingly low. Russian officials have claimed that measures they took - such as shutting down the Russian border with China and setting up isolation zones for quarantined patients - have helped to keep the virus under control. However, several news reports have been published casting skepticism on the numbers, suggesting that in Russia there is a widespread culture against producing information that may draw negative international attention. To interpret this plot then, we need to have an understanding of global *geopolitics*. The numbers that we see reported in some parts of the world will vary from numbers reported in other parts of the world, not because the values are actually different, but because there are different cultures of reporting in certain countries. 
-
-Characterize the geo-politics in your own dataset. Why might it be important to consider the variable of place when interpreting your data?
+In what ways have you had to make assumptions in order to glean insights from your dataset? Describe in specific detail how these assumptions might affect your data analysis.  Reference a specific analysis you've completed (either through transformation or plotting), and describe how this issue might impact how you interpret your data analysis.
 
 ```{r eval=FALSE}
-Fill your response here in at least 100 words.
+Fill your response here. 
 ```
 
-
-### Case Study 2: Covid-19 Cases over Time
-
-Now let's look at a time series of cases reported in the US. 
-
-```{r}
-cases_time_series %>% 
-  filter(Country.Region == "US") %>%
-  ggplot(aes(x = Case.Date, y = Cases)) + 
-  stat_summary(geom = "col", fun.y = "sum") +
-  theme_bw() 
-```
-
-This plot indicates that few cases were reported prior to mid-March. However, to responsibly interpret this plot, we need to pay close attention to how case totals are produced. The numbers of confirmed cases reported in this dataset are based on the number of Covid-19 tests that are reported positive. However, the extent of testing in the US has been variable since January due to a number of political, regulatory, and material roadblocks. Up through February, very few tests were being conducted in the US as the federal government downplayed the threat posed by the virus. A series of follow-up events continued to shift the testing landscape:
-
-* February 5: The CDC [shipped](https://www.technologyreview.com/s/615323/why-the-cdc-botched-its-coronavirus-testing/) coronavirus test kits to state labs with contaminated reagents. These labs ended up having to send their samples to the CDC for testing. 
-* February 29th: Up until this point, FDA regulations prevented labs from developing their own coronavirus test kits. On February, 29th, this rule was [lifted](https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-issues-new-policy-help-expedite-availability-diagnostics) allowing high-complexity labs to develop and run tests under what is called an Emergency Use Authorization. 
-* March 12th: Up until this point, in order for a lab to begin testing patients, they needed to be authorized by the FDA to do so. On March 12, the FDA [granted](https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-gives-flexibility-new-york-state-department-health-fda-issues) more flexibility to states to authorize this testing.
-* While these regulatory changes quickened the pace at which labs could test patients, at this point, a new issue was emerging. Labs began reporting [critical shortages](https://www.newyorker.com/news/news-desk/why-widespread-coronavirus-testing-isnt-coming-anytime-soon) of testing supplies and reagents for conducting tests. 
-
-With every change in the testing landscape, we can expect that the number of cases reported will also change. To interpret this plot, we need to have an understanding of *chrono-politics*, or the politics of time. Importantly, these regulatory timelines are playing out differently in different countries. There is much to consider at the intersection of geo-politics and chrono-politics. 
-
-Characterize the chrono-politics in your own dataset. Why might it be important to consider the variable of time when interpreting your data?
+What don’t you know about your data domain that has made it difficult to interpret the data? Describe in specific detail how these cultural gaps might affect your data analysis.  Reference a specific analysis you've completed (either through transformation or plotting), and describe how this issue might impact how you interpret your data analysis.
 
 ```{r eval=FALSE}
-Fill your response here in at least 100 words.
+Fill your response here. 
 ```
 
-## Confounding Variables
+Using the functions we have learned in R, create one plot that graphically represents one of the issues that you outlined above. It might be a plot that displays the sampling gaps. It might be a plot that showcases where data quality issues are present in your data. It might be a set of plots that show how different results are produced when different assumptions are made. Write a caption for this plot, explaining how it illustrates potential issues with your data analysis. 
 
-### Population
+```{r fig.height=5, fig.width=10}
+#Fill code here. 
+```
 
-When comparing certain phenomena across places - particuarly phenomena that are related to human activity - it is often important to consider how population can impact the numbers we see. 
-
-hopsitals per state
-
-cases over time
-
-### Semantic Changes
-
-Whenever we look at data, we are viewing it at a particular moment in time. However, definitions inevitably change... 
-
-Even categories that have institutionally standardized are constantly changing as a result of ____. 
 
 ## Continue your shiny app.
 
-With this in mind, we are going to add the capacity for users to specify specific geographies and timeframes when viewing the data in our app. While I believe all of you have a geography represented in your data, some of you do not have date and time represented in your data. If this is the case, you may remove the commented data-time inputs from the code below. 
-
-At this point, we will begin working in the ui code block and creating more crosstalk between the ui and the server. Users will input information into the front end of the app, and that input will be communicated to the server. More specifically, users will select a geography and a data/timeframe, and the server will filter the dataset according to the selected features and recreate the values/plots on the filtered data. 
-
-Be sure to follow all commented instructions below to add inputs to your Shiny app. 
+Now we will aggregate all of the text that you produced above, along with text that you produced in lab 3 into an "About the Data" page on your Shiny App. Follow the instructions below to fill your text into a new page created on the front end of the app. 
 
 ```{r}
-geo_input_choices <- hospitals %>% select(STATE) %>% distinct() %>% arrange(STATE)
-date_input_start <- hospitals %>% summarize(date = min(SOURCEDATE))
-date_input_end <- hospitals %>% summarize(date = max(SOURCEDATE))
+
+#INPUT VARIABLES
+
+geo_input_choices <- 
+  #REPLACE hospitals BELOW WITH YOUR OWN DATAFRAME
+  hospitals %>% 
+  #REPLACE STATE BELOW WITH YOUR OWN GEOGRAPHIC VARIABLE
+  select(STATE) %>% 
+  distinct() %>% 
+  #REPLACE STATE BELOW WITH YOUR OWN GEOGRAPHIC VARIABLE
+  arrange(STATE)
+
+#COMMENT LINES BELOW IF YOU DO NOT HAVE A TEMPORAL VARIABLE IN YOUR DATAFRAME
+date_input_start <- 
+  #REPLACE hospitals BELOW WITH YOUR OWN DATAFRAME
+  hospitals %>% 
+  #REPLACE SOURCEDATE BELOW WITH YOUR OWN TEMPORAL VARIABLE
+  summarize(date = min(SOURCEDATE))
+
+date_input_end <- 
+  #REPLACE hospitals BELOW WITH YOUR OWN DATAFRAME
+  hospitals %>% 
+  #REPLACE SOURCEDATE BELOW WITH YOUR OWN TEMPORAL VARIABLE
+  summarize(date = max(SOURCEDATE))
+#COMMENT LINES ABOVE IF YOU DO NOT HAVE A TEMPORAL VARIABLE IN YOUR DATAFRAME
+
+#UI
 
 ui <- dashboardPage(
   
+  #REPLACE 'TITLE HERE' BELOW WITH YOUR OWN TITLE
   dashboardHeader(title = "TITLE HERE"),
+  #REPLACE 'TITLE HERE' ABOVE WITH YOUR OWN TITLE
   
   dashboardSidebar(
+      sidebarMenu(
+        menuItem("Dashboard", tabName = "dashboard", icon = icon("dashboard")),
+        menuItem("About the Data", tabName = "about", icon = icon("info-sign"))
+      ),
       selectInput(inputId = "geo_val", label = "Select an geography:", choices = geo_input_choices, selected = geo_input_choices[1]),
+      #COMMENT LINE BELOW IF YOU DO NOT HAVE A TEMPORAL VARIABLE IN YOUR DATAFRAME
       dateRangeInput(inputId = "date_val", label = "Select a date range:", start = date_input_start$date, end = date_input_end$date)
+      #COMMENT LINE ABOVE IF YOU DO NOT HAVE A TEMPORAL VARIABLE IN YOUR DATAFRAME
   ),
   
   dashboardBody(
-      infoBoxOutput("value1", width = 4),
-      infoBoxOutput("value2", width = 4),
-      infoBoxOutput("value3", width = 4),
-   
-      box(plotOutput("plot1")),
-      box(plotOutput("plot2")),
-      box(plotOutput("plot3")),
-      box(plotOutput("plot4"))
-
+    tabItems(
+      tabItem(tabName = "dashboard",
+        infoBoxOutput("value1", width = 4),
+        infoBoxOutput("value2", width = 4),
+        infoBoxOutput("value3", width = 4),
+     
+        box(plotOutput("plot1")),
+        box(plotOutput("plot2")),
+        box(plotOutput("plot3")),
+        box(plotOutput("plot4"))
+      ),
+      tabItem(tabName = "about",
+              tags$h1("Data Source"),
+                #REPLACE TEXT IN QUOTATIONS BELOW WITH YOUR OWN TEXT ABOUT YOUR DATA'S SOURCE
+              tags$p("Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"),
+              #REPLACE TEXT IN QUOTATIONS ABOVE WITH YOUR OWN TEXT ABOUT YOUR DATA'S SOURCE
+              
+              tags$h1("Data Context"),
+              #REPLACE TEXT IN QUOTATIONS BELOW WITH YOUR OWN TEXT ABOUT YOUR DATA'S CONTEXT
+              tags$p("Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"),
+              #REPLACE TEXT IN QUOTATIONS ABOVE WITH YOUR OWN TEXT ABOUT YOUR DATA'S SOURCE
+              
+              tags$h1("Insights"),
+              #REPLACE TEXT IN QUOTATIONS BELOW WITH YOUR OWN TEXT ABOUT YOUR INSIGHTS
+              tags$p("Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"),
+              #REPLACE TEXT IN QUOTATIONS ABOVE WITH YOUR OWN TEXT ABOUT YOUR INSIGHTS
+              
+              tags$h1("Knowledge Gaps"),
+              #REPLACE TEXT IN QUOTATIONS BELOW WITH YOUR OWN TEXT ABOUT YOUR KNOWLEDGE GAPS
+              tags$p("Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?")
+              #REPLACE TEXT IN QUOTATIONS ABOVE WITH YOUR OWN TEXT ABOUT YOUR KNOWLEDGE GAPS
+      )
+    )
   )
 )
   
 
 ```
 
-In each of your functions below, you are going to add a filter statement, filtering to the user input. 
+We won't be touching the server function this week. You can copy and paste yours from Lab 7 to replace my code below. 
 
 ```{r}
 server <- function(input, output) {
@@ -370,58 +253,5 @@ server <- function(input, output) {
 ```{r}
 shinyApp(ui, server)
 ```
-
-
-## Other Case Studies to Consider (I will continue to grow this list)
-
-### Case Study: Chrono-politics of Calls to 311 during Hurricane Sandy
-
-311 is basically a customer service number for cities - a number for residents and visitors to report non-emergency issues, such as potholes and graffiti to city officials. In most cities, every call to 311 gets aggregated in a database, and increasingly, city officials are performing data analysis on the calls to figure out where certain issues in the city are concentrated. If they receive a number of calls about missed garbage pick-ups in a certain community, they may divert attention and resources there for improved sanitation. Often this data is publicly accessible for communities to analyze. 
-
-```{r}
-library(scales)
-nyc311 <- read.csv("https://github.com/lindsaypoirier/STS-115/blob/master/datasets/311_before_2015.csv?raw=true", stringsAsFactors = FALSE) 
-```
-
-When Hurricane Sandy hit NYC in 2012, the City leveraged data about calls New Yorkers had made to 311 to track where a number of different issues were occurring. Visualizing data about 311 calls in the three months following the disaster indeed showed a spike in complaints about issues like damaged trees and lack of heat in apartment buildings throughout the city. Leveraging this data, the city was able to position the devastation of the disaster as episodic - a result of natural forces beyond their control.
-
-```{r}
-nyc311 %>% 
-  filter(year(Created.Date) == 2012 & month(Created.Date) %in% c(7:11)) %>%
-  ggplot(aes(x = as.Date(Created.Date), group = 1)) +
-  geom_vline(xintercept=as.Date(c("2012-10-29")),linetype=4, colour="black") +
-  geom_line(stat="count") + 
-  facet_wrap(~Complaint.Type) + 
-  labs(x="Month", y="Count") +
-  scale_x_date() +
-  theme_bw() +
-  annotate(geom = "label", x = as.Date("2012-10-29"), y = 4000, label = "Hurricane Sandy", angle = 90)
-```
-
-However, social researchers have argued that it is not so simple to delimit the temporal boundaries of a disaster. While a natural event may happen on a particular day or span of days, the structural conditions of the communities they impact have much longer timespans. Natural events occurring in delimited periods of time often exacerbate existing social issues like poverty, lack of affordable housing, and unequal access to healthcare. 
-
-Let's zoom out on the 311 data to look at these issues over the course of years versus these three months.  Complaints to 311 about damaged trees do spike following most major natural events. However, complaints about lack of heat in apartments spike every year in October ...because in New York, that's when it gets cold. By only look at the data in months immediately after the disaster, the city could obscure the big picture - that poor New Yorkers face apartment negligence every year. The temporal context in which we analyze data matters a great deal for how we interpret it. 
-
-```{r fig.height=3, fig.width=10}
-nyc311 %>% 
-  ggplot(aes(x=as.Date(Created.Date), col=as.factor(year(Created.Date)), group = year(Created.Date))) +
-  geom_vline(xintercept=as.Date(c("2010-03-12","2010-09-16","2011-08-28","2011-10-29","2012-10-29")),linetype=4, colour="black") +
-  geom_line(stat = "count") + 
-  facet_wrap(~Complaint.Type) +
-  labs(x="Month", col="Year") +
-  scale_x_date(breaks = "3 months", labels=date_format("%b-%y")) +
-  theme_bw() +
-  annotate(geom = "label", x = as.Date("2010-03-12"), y = 4000, label = "nor'easter", angle = 90) +
-  annotate(geom = "label", x = as.Date("2010-09-16"), y = 4000, label = "tornadoes", angle = 90) +
-  annotate(geom = "label", x = as.Date("2011-08-28"), y = 4000, label = "Hurricane Irene", angle = 90) +
-  annotate(geom = "label", x = as.Date("2011-10-29"), y = 4500, label = "Halloween nor'easter", angle = 90) +
-  annotate(geom = "label", x = as.Date("2012-10-29"), y = 4000, label = "Hurricane Sandy", angle = 90)
-  #nor'easter, tornadoes, Irene, Halloween nor'easter, Sandy
-```
-
-> Liboiron, Max. 2015. “Disaster Data, Data Activism: Grassroots Responses to Representing Superstorm Sandy.” In Extreme Weather and Global Media, edited by Julia Leyda and Diane Negra. Taylor & Francis Group. https://doi.org/10.4324/9781315756486-7.
-
-
-
 
 
